--- a/templates/index.html
+++ b/templates/index.html
@@ -163,8 +163,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
+          <!--<b>{{ output_text }}</b>-->
           <img src="{{ output_pieplot }}">
-          <p><h5><b>{{ output_text }}</b></h5></p>
         </div>
 
       </div>
