--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
           <h2>Manage Your <span>Greenhouse</span></h2>
           <p>Moving to Sustainable Sources of Energy</p>
           <div class="d-flex justify-content-center justify-content-lg-start">
-            <a href="#about" class="btn-get-started">Get Started</a>
+            <a href="#contact" class="btn-get-started">Get Started</a>
             <!--<a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>-->
           </div>
         </div>
@@ -163,8 +163,10 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <!--<b>{{ output_text }}</b>-->
-          <img src="{{ output_pieplot }}">
+          <!--<img src="{{ output_pieplot }}">-->
+          <iframe width="700" height="600" frameborder="0" scrolling="no" src="{{ output_plotlink }}"></iframe>
+          <br>
+          <b>{{ output_text }}</b>
         </div>
 
       </div>
